force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/BMCServiceDesk__BMC_BaseElement__c.object-meta.xml
<CustomObject>
    <description>BMC_BaseElement. CMDB Class that is the CDM common base class (at the top of the inheritance tree) for configuration item (CI) classes. Attributes of this class are inherited by all CI classes. In addition to attributes such as Name that you populate for all CIs, BMC_BaseElement also contains core attributes such as CompareActionCode, which is populated automatically by theCMDB, and CreateDate, which is populated automatically. For relationships, the CDM common base class is BMC_BaseRelationships.  This class corresponds to the DMTF class CIM_ManagedElement.</description>
    <label>Base Element</label>
    <nameField>
        <label>BMC_BaseElement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>