force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Active_Maximum_Transmission_Unit__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Active_Maximum_Transmission_Unit__c</fullName>
    <label>Active Maximum Transmission Unit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>