force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ActivityType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ActivityType__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>Business Process</fullName>
            </value>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>