force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__AddressAdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AddressAdditionalInfo__c</fullName>
    <label>Address Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>