force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__AddressType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AddressType__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>IPv4</fullName>
            </value>
            <value>
                <fullName>IPv6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>