force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Application_Infrastructure_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Application_Infrastructure_Type__c</fullName>
    <label>Application Infrastructure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Server</fullName>
            </value>
            <value>
                <fullName>SAP System</fullName>
            </value>
            <value>
                <fullName>Siebel Enterprise</fullName>
            </value>
            <value>
                <fullName>Database System</fullName>
            </value>
            <value>
                <fullName>Clustered Application Server</fullName>
            </value>
            <value>
                <fullName>Other (default)</fullName>
                <default>true</default>
                <label>Other (default)</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>