force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ApplicationType__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>StandardApplication</fullName>
            </value>
            <value>
                <fullName>InfrastructureApplication</fullName>
            </value>
            <value>
                <fullName>ClusteredApplication</fullName>
            </value>
            <value>
                <fullName>CompositeApplicaiton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>