force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__AssemblyId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AssemblyId__c</fullName>
    <inlineHelpText>This uniquely identifies the assembly associated with this CI</inlineHelpText>
    <label>Assembly ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>