force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Asset_Age__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Asset_Age__c</fullName>
    <description>Indicates the age of an asset by calculating the difference between the current date and the asset birth date.</description>
    <formula>ROUND((NOW() -  BMCServiceDesk__Asset_Birth_date__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the age of an asset by calculating the difference between the current date and the asset birth date.</inlineHelpText>
    <label>Asset Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>