force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Asset_Birth_date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Asset_Birth_date__c</fullName>
    <description>Indicates the date when an asset&quot;s age starts being tracked. This date can be entered or automatically calculated based upon the rules defined by the Administrator. Please contact your administrator for more details.</description>
    <inlineHelpText>Indicates the date when an asset&quot;s age starts being tracked. This date can be entered or automatically calculated based upon the rules defined by the Administrator. Please contact your administrator for more details.</inlineHelpText>
    <label>Asset Birthdate</label>
    <type>DateTime</type>
</CustomField>