force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Asset_Class__c</fullName>
    <formula>If( OR( ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c, &apos;Asset&apos;) ,ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)),BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__Class__c,If( OR(ISNULL(BMCServiceDesk__FKAssetRuleClass__r.BMCServiceDesk__Class__c), ISBLANK(BMCServiceDesk__FKAssetRuleClass__r.BMCServiceDesk__Class__c)),&apos;&apos;,BMCServiceDesk__FKAssetRuleClass__r.BMCServiceDesk__Class__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Class</label>
    <type>Text</type>
</CustomField>