force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__AvailableIFLs__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AvailableIFLs__c</fullName>
    <label>Available IFLs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>