force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__BuildNumber__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BuildNumber__c</fullName>
    <label>Build Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>