force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__BusinessCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BusinessCategory__c</fullName>
    <label>Business Category</label>
    <length>128</length>
    <type>Text</type>
</CustomField>