force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__BYOD__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BYOD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Bring Your Own Device (BYOD) policy enables employees to use their own mobile devices in the workplace. This field indicates if a mobile device is owned by an employee.</description>
    <label>BYOD</label>
    <type>Checkbox</type>
</CustomField>