force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Capabilities__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Capabilities__c</fullName>
    <label>Capabilities</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>