force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Category__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Category__c</fullName>
    <label>Category</label>
    <length>60</length>
    <type>Text</type>
</CustomField>