force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__CFRM_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CFRM_Site_Name__c</fullName>
    <label>CFRM Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>