force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Chassis_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Chassis_Type__c</fullName>
    <label>Chassis Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Low-profile desktop</fullName>
            </value>
            <value>
                <fullName>Pizza box</fullName>
            </value>
            <value>
                <fullName>Mini tower</fullName>
            </value>
            <value>
                <fullName>Tower</fullName>
            </value>
            <value>
                <fullName>Portable</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Notebook</fullName>
            </value>
            <value>
                <fullName>Hand-held</fullName>
            </value>
            <value>
                <fullName>Docking Station</fullName>
            </value>
            <value>
                <fullName>All-in-one</fullName>
            </value>
            <value>
                <fullName>Subnotebook</fullName>
            </value>
            <value>
                <fullName>Space-saving</fullName>
            </value>
            <value>
                <fullName>Lunch box</fullName>
            </value>
            <value>
                <fullName>Main system Chassis</fullName>
            </value>
            <value>
                <fullName>Expansion Chassis</fullName>
            </value>
            <value>
                <fullName>Subchassis</fullName>
            </value>
            <value>
                <fullName>Bus-expansion Chassis</fullName>
            </value>
            <value>
                <fullName>Peripheral Chassis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>