force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__CITag__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CITag__c</fullName>
    <inlineHelpText>Use this field to enter the tag number of the physical entity represented by the instance.</inlineHelpText>
    <label>Asset #</label>
    <length>254</length>
    <type>Text</type>
</CustomField>