force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__City__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__City__c</fullName>
    <label>City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>