force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ClassID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClassID__c</fullName>
    <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__ClassID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically set to the ID of the class whose instance is being created.</inlineHelpText>
    <label>Class ID</label>
    <type>Text</type>
</CustomField>