force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ClassName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClassName__c</fullName>
    <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically set to the name of the class whose instance is being created.</inlineHelpText>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>