force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ClusterType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClusterType__c</fullName>
    <label>Cluster Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Software Cluster</fullName>
                <default>true</default>
                <label>Software Cluster</label>
            </value>
            <value>
                <fullName>Hardware Cluster</fullName>
            </value>
            <value>
                <fullName>SoftwareServerCluster</fullName>
            </value>
            <value>
                <fullName>ApplicationInstanceCluster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>