force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__CMDB_Class__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CMDB_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMDB_Class</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipLabel>BMC_BaseElements</relationshipLabel>
    <relationshipName>BMC_BaseElements</relationshipName>
    <type>Lookup</type>
</CustomField>