force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__CommonName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CommonName__c</fullName>
    <label>Common Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>