force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__CompressionMethod__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CompressionMethod__c</fullName>
    <label>Compression Method</label>
    <length>60</length>
    <type>Text</type>
</CustomField>