force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ConfigurationBasicNumber__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ConfigurationBasicNumber__c</fullName>
    <label>Configuration Basic Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>