force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ConnectivityStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ConnectivityStatus__c</fullName>
    <label>Connectivity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Connectivity/Up</fullName>
            </value>
            <value>
                <fullName>No Connectivity/Down</fullName>
            </value>
            <value>
                <fullName>Partitioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>