force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ContractType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other (0)</fullName>
            </value>
            <value>
                <fullName>Unknown (1)</fullName>
                <default>true</default>
                <label>Unknown (1)</label>
            </value>
            <value>
                <fullName>SLA (100)</fullName>
            </value>
            <value>
                <fullName>OLA (200)</fullName>
            </value>
            <value>
                <fullName>UPC (300)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>