force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Cost_Amount__c</fullName>
    <label>Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>