force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Cost_Derived_Flag__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Cost_Derived_Flag__c</fullName>
    <label>Cost Derived Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>