force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>OTH - Any Other Country</fullName>
            </value>
            <value>
                <fullName>ABW - Aruba</fullName>
            </value>
            <value>
                <fullName>AFG - Afghanistan</fullName>
            </value>
            <value>
                <fullName>AGO - Angola</fullName>
            </value>
            <value>
                <fullName>AIA - Anguilla</fullName>
            </value>
            <value>
                <fullName>ALA - Aland Islands</fullName>
            </value>
            <value>
                <fullName>ALB - Albania</fullName>
            </value>
            <value>
                <fullName>AND - Andorra</fullName>
            </value>
            <value>
                <fullName>ANT - Netherlands Antilles</fullName>
            </value>
            <value>
                <fullName>ARE - United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>ARG - Argentina</fullName>
            </value>
            <value>
                <fullName>ARM - Armenia</fullName>
            </value>
            <value>
                <fullName>ASM - American Samoa</fullName>
            </value>
            <value>
                <fullName>ATA - Antarctica</fullName>
            </value>
            <value>
                <fullName>ATF - French Southern Territories</fullName>
            </value>
            <value>
                <fullName>ATG - Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>AUS - Australia</fullName>
            </value>
            <value>
                <fullName>AUT - Austria</fullName>
            </value>
            <value>
                <fullName>AZE - Azerbaijan</fullName>
            </value>
            <value>
                <fullName>BDI - Burundi</fullName>
            </value>
            <value>
                <fullName>BEL - Belgium</fullName>
            </value>
            <value>
                <fullName>BEN - Benin</fullName>
            </value>
            <value>
                <fullName>BFA - Burkina Faso</fullName>
            </value>
            <value>
                <fullName>BGD - Bangladesh</fullName>
            </value>
            <value>
                <fullName>BGR - Bulgaria</fullName>
            </value>
            <value>
                <fullName>BHR - Bahrain</fullName>
            </value>
            <value>
                <fullName>BHS - Bahamas</fullName>
            </value>
            <value>
                <fullName>BIH - Bosnia and Herzegovina</fullName>
            </value>
            <value>
                <fullName>BLR - Belarus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>