force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__DataRate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DataRate__c</fullName>
    <label>Data Rate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>