force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__DatasetId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DatasetId__c</fullName>
    <label>DatasetId</label>
    <length>127</length>
    <type>Text</type>
</CustomField>