force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <inlineHelpText>Use this field to enter a description of the instance.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>