force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Display_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Display_Type__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiscan Color</fullName>
            </value>
            <value>
                <fullName>Multiscan Monochrome</fullName>
            </value>
            <value>
                <fullName>Fixed Frequency Color</fullName>
            </value>
            <value>
                <fullName>Fixed Frequency Monochrome</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>