force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Domain__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Domain__c</fullName>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>