force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__DomainControllerAddressType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DomainControllerAddressType__c</fullName>
    <label>Domain Controller Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>DS_INET_ADDRESS</fullName>
            </value>
            <value>
                <fullName>DS_NETBIOS_ADDRESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>